--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
 <app-route-plotter></app-route-plotter>
+<div class="absolute">
+    <div class="secondary-text">
+        Developed by <a href="https://github.com/shubham-0819">shubham</a>
+    </div>
+</div>
