updated rempty state UI

--- a/src/app/route-plotter/route-plotter.component.html
+++ b/src/app/route-plotter/route-plotter.component.html
@@ -82,7 +82,7 @@
     </div>
 
     <div id="route-svg" class="svg-container">
-      <div *ngIf="trips.length === 0" class="empty-state">
+      <div *ngIf="trips.length == 0" class="empty-state">
         <i class="fas fa-route empty-icon"></i>
         <p>Add your first route to start plotting!</p>
       </div>
