added github link to my profiole

--- a/src/app/info-modal/info-modal.component.html
+++ b/src/app/info-modal/info-modal.component.html
@@ -21,7 +21,14 @@
         <li><strong>Scenario 3:</strong> Bangalore → Chennai, Bangalore → Chennai (Level 2)</li>
       </ul>
     </div>
-
+    <button class="close-btn">
+      <a href="https://github.com/shubham-0819" target="_blank" title="Developer's GitHub">
+        <i class="fab fa-github profile-icon"></i>
+      </a>
+      Visit My Profile
+    </button> 
+       
     <button class="close-btn" (click)="onClose()">Close</button>
   </div>
+
 </div> 
