--- a/src/app/route-plotter/route-plotter.component.html
+++ b/src/app/route-plotter/route-plotter.component.html
@@ -2,10 +2,15 @@
   <div class="main-content">
     <div class="input-section">
       <div class="heading-with-info">
-        <h2>Add New Route</h2>
+        <div class="heading-group">
+          <h2>Add New Route</h2>
+        </div>
         <div class="header-actions">
           <i class="fas fa-info-circle info-icon" (click)="toggleInfoModal()" title="Click for detailed information"></i>
           <i class="fas fa-question-circle help-icon" (click)="toggleTips()" title="Show/hide tips"></i>
+          <a href="https://github.com/shubham-0819/route-plotter" target="_blank" title="Developer's GitHub">
+            <i class="fab fa-github profile-icon"></i>
+          </a>
         </div>
       </div>
       <div class="description">
